cabal-version:      3.0

name:               bruh
version:            0.1.0.0
license:            NONE
author:             Danil Berestov
maintainer:         goosedb@yandex.ru
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Bruh
                    , Bruh.IO
                    , Bruh.Math
                    , Bruh.Text
                    , Bruh.ByteString
                    , Bruh.Container.Map
                    , Bruh.Container.Set

    build-depends:    base ^>=4.14.1.0
                    , deepseq
                    , text
                    , bytestring
                    , containers

    hs-source-dirs:   src

    default-language: Haskell2010
